conf/spoolman/spoolman-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spoolman-svc

spec:
  ports:
  - name: spoolman-http
    protocol: TCP
    port: 8000
  selector:
    app: spoolman
