conf/spoolman/spoolman-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-spoolman
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`spoolman.idcrook.dev`)
      services:
        - name: spoolman-svc
          port: 8000
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-spoolman

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`spoolman.idcrook.dev`)
      services:
        - name: spoolman-svc
          port: 8000
      middlewares:
        - name: my-traefik-warp
#        - name: my-traefik-auth-with-exceptions
#        - name: tinyauth-tinyauth-middleware@kubernetescrd
  tls:
    certResolver: wildcardresolver
